--- a/src/styles/init.scss
+++ b/src/styles/init.scss
@@ -1,4 +1,3 @@
-@import './normalize.scss';
 @import './skeleton.scss';
 
 $color_1: #fff;
@@ -106,7 +105,6 @@ body {
   font-size: 14px;
 }
 .body-container {
-  width: 935px;
   //-webkit-box-shadow: -2px 11px 62px 9px #c7c7c7;
   //box-shadow: -2px 11px 62px 9px #c7c7c7;
   .row-container {
@@ -121,8 +119,8 @@ body {
   font-size: 35px;
 }
 .left-col {
-  padding: 20px;
-  min-width: 212px;
+  padding: 15px;
+  min-width: 189px;
   background-color: $background_color_2;
   background-size: cover;
   background-position: center center;
@@ -161,12 +159,12 @@ body {
 }
 .top-heading {
   background-color: $background_color_3;
-  padding: 20px 50px;
+  padding: 20px 35px;
   text-align: left;
   color: $color_1;
 }
 .sub-heading {
-  font-size: 21px;
+  font-size: 17px;
   margin-bottom: 0px;
 }
 .half-line {
@@ -184,7 +182,7 @@ body {
   border-radius: 50%;
   width: 90%;
   height: auto;
-  margin: 0 auto;
+  margin: 9px auto;
   display: block;
   //-webkit-filter: grayscale(100%);
   //filter: grayscale(100%);
