--- a/src/styles/skeleton.scss
+++ b/src/styles/skeleton.scss
@@ -38,7 +38,8 @@
   box-sizing: border-box;
 }
 
-.column, .columns {
+.column,
+.columns {
   width: 100%;
   float: left;
   box-sizing: border-box;
@@ -57,14 +58,17 @@
   .container {
     width: 80%;
   }
-  .column, .columns {
+  .column,
+  .columns {
     margin-left: 4%;
   }
-  .column:first-child, .columns:first-child {
+  .column:first-child,
+  .columns:first-child {
     margin-left: 0;
   }
   .one {
-    &.column, &.columns {
+    &.column,
+    &.columns {
       width: 4.66666666667%;
     }
   }
@@ -90,7 +94,7 @@
     width: 65.3333333333%;
   }
   .nine.columns {
-    width: 74.0%;
+    width: 74%;
   }
   .ten.columns {
     width: 82.6666666667%;
@@ -113,72 +117,86 @@
   }
   /* Offsets */
   .offset-by-one {
-    &.column, &.columns {
+    &.column,
+    &.columns {
       margin-left: 8.66666666667%;
     }
   }
   .offset-by-two {
-    &.column, &.columns {
+    &.column,
+    &.columns {
       margin-left: 17.3333333333%;
     }
   }
   .offset-by-three {
-    &.column, &.columns {
+    &.column,
+    &.columns {
       margin-left: 26%;
     }
   }
   .offset-by-four {
-    &.column, &.columns {
+    &.column,
+    &.columns {
       margin-left: 34.6666666667%;
     }
   }
   .offset-by-five {
-    &.column, &.columns {
+    &.column,
+    &.columns {
       margin-left: 43.3333333333%;
     }
   }
   .offset-by-six {
-    &.column, &.columns {
+    &.column,
+    &.columns {
       margin-left: 52%;
     }
   }
   .offset-by-seven {
-    &.column, &.columns {
+    &.column,
+    &.columns {
       margin-left: 60.6666666667%;
     }
   }
   .offset-by-eight {
-    &.column, &.columns {
+    &.column,
+    &.columns {
       margin-left: 69.3333333333%;
     }
   }
   .offset-by-nine {
-    &.column, &.columns {
-      margin-left: 78.0%;
+    &.column,
+    &.columns {
+      margin-left: 78%;
     }
   }
   .offset-by-ten {
-    &.column, &.columns {
+    &.column,
+    &.columns {
       margin-left: 86.6666666667%;
     }
   }
   .offset-by-eleven {
-    &.column, &.columns {
+    &.column,
+    &.columns {
       margin-left: 95.3333333333%;
     }
   }
   .offset-by-one-third {
-    &.column, &.columns {
+    &.column,
+    &.columns {
       margin-left: 34.6666666667%;
     }
   }
   .offset-by-two-thirds {
-    &.column, &.columns {
+    &.column,
+    &.columns {
       margin-left: 69.3333333333%;
     }
   }
   .offset-by-one-half {
-    &.column, &.columns {
+    &.column,
+    &.columns {
       margin-left: 52%;
     }
   }
@@ -199,47 +217,53 @@ body {
   /* currently ems cause chrome bug misinterpreting rems on body element */
   line-height: 1.6;
   font-weight: 400;
-  font-family: "Raleway", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: 'Raleway', 'HelveticaNeue', 'Helvetica Neue', Helvetica, Arial,
+    sans-serif;
   color: #222;
 }
 
 /* Typography
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   margin-top: 0;
   margin-bottom: 2rem;
   font-weight: 300;
 }
 
 h1 {
-  font-size: 4.0rem;
+  font-size: 4rem;
   line-height: 1.2;
-  letter-spacing: -.1rem;
+  letter-spacing: -0.1rem;
 }
 
 h2 {
   font-size: 3.6rem;
   line-height: 1.25;
-  letter-spacing: -.1rem;
+  letter-spacing: -0.1rem;
 }
 
 h3 {
-  font-size: 3.0rem;
+  font-size: 3rem;
   line-height: 1.3;
-  letter-spacing: -.1rem;
+  letter-spacing: -0.1rem;
 }
 
 h4 {
   font-size: 2.4rem;
   line-height: 1.35;
-  letter-spacing: -.08rem;
+  letter-spacing: -0.08rem;
 }
 
 h5 {
   font-size: 1.8rem;
   line-height: 1.5;
-  letter-spacing: -.05rem;
+  letter-spacing: -0.05rem;
 }
 
 h6 {
@@ -251,7 +275,7 @@ h6 {
 /* Larger than phablet */
 @media (min-width: 550px) {
   h1 {
-    font-size: 5.0rem;
+    font-size: 5rem;
   }
   h2 {
     font-size: 4.2rem;
@@ -260,7 +284,7 @@ h6 {
     font-size: 3.6rem;
   }
   h4 {
-    font-size: 3.0rem;
+    font-size: 3rem;
   }
   h5 {
     font-size: 2.4rem;
@@ -278,16 +302,17 @@ p {
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
 a {
-  color: #1EAEDB;
+  color: #1eaedb;
   &:hover {
-    color: #0FA0CE;
+    color: #0fa0ce;
   }
 }
 
 /* Buttons
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
-.button, button {
+.button,
+button {
   display: inline-block;
   height: 38px;
   padding: 0 30px;
@@ -296,7 +321,7 @@ a {
   font-size: 11px;
   font-weight: 600;
   line-height: 38px;
-  letter-spacing: .1rem;
+  letter-spacing: 0.1rem;
   text-transform: uppercase;
   text-decoration: none;
   white-space: nowrap;
@@ -308,7 +333,9 @@ a {
 }
 
 input {
-  &[type="submit"], &[type="reset"], &[type="button"] {
+  &[type='submit'],
+  &[type='reset'],
+  &[type='button'] {
     display: inline-block;
     height: 38px;
     padding: 0 30px;
@@ -317,7 +344,7 @@ input {
     font-size: 11px;
     font-weight: 600;
     line-height: 38px;
-    letter-spacing: .1rem;
+    letter-spacing: 0.1rem;
     text-transform: uppercase;
     text-decoration: none;
     white-space: nowrap;
@@ -329,80 +356,101 @@ input {
   }
 }
 
-.button:hover, button:hover {
+.button:hover,
+button:hover {
   color: #333;
   border-color: #888;
   outline: 0;
 }
 
 input {
-  &[type="submit"]:hover, &[type="reset"]:hover, &[type="button"]:hover {
+  &[type='submit']:hover,
+  &[type='reset']:hover,
+  &[type='button']:hover {
     color: #333;
     border-color: #888;
     outline: 0;
   }
 }
 
-.button:focus, button:focus {
+.button:focus,
+button:focus {
   color: #333;
   border-color: #888;
   outline: 0;
 }
 
 input {
-  &[type="submit"]:focus, &[type="reset"]:focus, &[type="button"]:focus {
+  &[type='submit']:focus,
+  &[type='reset']:focus,
+  &[type='button']:focus {
     color: #333;
     border-color: #888;
     outline: 0;
   }
 }
 
-.button.button-primary, button.button-primary {
-  color: #FFF;
-  background-color: #33C3F0;
-  border-color: #33C3F0;
+.button.button-primary,
+button.button-primary {
+  color: #fff;
+  background-color: #33c3f0;
+  border-color: #33c3f0;
 }
 
 input {
-  &[type="submit"].button-primary, &[type="reset"].button-primary, &[type="button"].button-primary {
-    color: #FFF;
-    background-color: #33C3F0;
-    border-color: #33C3F0;
+  &[type='submit'].button-primary,
+  &[type='reset'].button-primary,
+  &[type='button'].button-primary {
+    color: #fff;
+    background-color: #33c3f0;
+    border-color: #33c3f0;
   }
 }
 
-.button.button-primary:hover, button.button-primary:hover {
-  color: #FFF;
-  background-color: #1EAEDB;
-  border-color: #1EAEDB;
+.button.button-primary:hover,
+button.button-primary:hover {
+  color: #fff;
+  background-color: #1eaedb;
+  border-color: #1eaedb;
 }
 
 input {
-  &[type="submit"].button-primary:hover, &[type="reset"].button-primary:hover, &[type="button"].button-primary:hover {
-    color: #FFF;
-    background-color: #1EAEDB;
-    border-color: #1EAEDB;
+  &[type='submit'].button-primary:hover,
+  &[type='reset'].button-primary:hover,
+  &[type='button'].button-primary:hover {
+    color: #fff;
+    background-color: #1eaedb;
+    border-color: #1eaedb;
   }
 }
 
-.button.button-primary:focus, button.button-primary:focus {
-  color: #FFF;
-  background-color: #1EAEDB;
-  border-color: #1EAEDB;
+.button.button-primary:focus,
+button.button-primary:focus {
+  color: #fff;
+  background-color: #1eaedb;
+  border-color: #1eaedb;
 }
 
 input {
-  &[type="submit"].button-primary:focus, &[type="reset"].button-primary:focus, &[type="button"].button-primary:focus {
-    color: #FFF;
-    background-color: #1EAEDB;
-    border-color: #1EAEDB;
+  &[type='submit'].button-primary:focus,
+  &[type='reset'].button-primary:focus,
+  &[type='button'].button-primary:focus {
+    color: #fff;
+    background-color: #1eaedb;
+    border-color: #1eaedb;
   }
-  &[type="email"], &[type="number"], &[type="search"], &[type="text"], &[type="tel"], &[type="url"], &[type="password"] {
+  &[type='email'],
+  &[type='number'],
+  &[type='search'],
+  &[type='text'],
+  &[type='tel'],
+  &[type='url'],
+  &[type='password'] {
     height: 38px;
     padding: 6px 10px;
     /* The 6px vertically centers text on FF, ignored by Webkit */
     background-color: #fff;
-    border: 1px solid #D1D1D1;
+    border: 1px solid #d1d1d1;
     border-radius: 4px;
     box-shadow: none;
     box-sizing: border-box;
@@ -412,12 +460,13 @@ input {
 /* Forms
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
-textarea, select {
+textarea,
+select {
   height: 38px;
   padding: 6px 10px;
   /* The 6px vertically centers text on FF, ignored by Webkit */
   background-color: #fff;
-  border: 1px solid #D1D1D1;
+  border: 1px solid #d1d1d1;
   border-radius: 4px;
   box-shadow: none;
   box-sizing: border-box;
@@ -426,7 +475,13 @@ textarea, select {
 /* Removes awkward default styles on some inputs for iOS */
 
 input {
-  &[type="email"], &[type="number"], &[type="search"], &[type="text"], &[type="tel"], &[type="url"], &[type="password"] {
+  &[type='email'],
+  &[type='number'],
+  &[type='search'],
+  &[type='text'],
+  &[type='tel'],
+  &[type='url'],
+  &[type='password'] {
     -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;
@@ -443,20 +498,28 @@ textarea {
 }
 
 input {
-  &[type="email"]:focus, &[type="number"]:focus, &[type="search"]:focus, &[type="text"]:focus, &[type="tel"]:focus, &[type="url"]:focus, &[type="password"]:focus {
-    border: 1px solid #33C3F0;
+  &[type='email']:focus,
+  &[type='number']:focus,
+  &[type='search']:focus,
+  &[type='text']:focus,
+  &[type='tel']:focus,
+  &[type='url']:focus,
+  &[type='password']:focus {
+    border: 1px solid #33c3f0;
     outline: 0;
   }
 }
 
-textarea:focus, select:focus {
-  border: 1px solid #33C3F0;
+textarea:focus,
+select:focus {
+  border: 1px solid #33c3f0;
   outline: 0;
 }
 
-label, legend {
+label,
+legend {
   display: block;
-  margin-bottom: .5rem;
+  margin-bottom: 0.5rem;
   font-weight: 600;
 }
 
@@ -466,14 +529,15 @@ fieldset {
 }
 
 input {
-  &[type="checkbox"], &[type="radio"] {
+  &[type='checkbox'],
+  &[type='radio'] {
     display: inline;
   }
 }
 
 label > .label-body {
   display: inline-block;
-  margin-left: .5rem;
+  margin-left: 0.5rem;
   font-weight: normal;
 }
 
@@ -493,33 +557,35 @@ ol {
 ul {
   padding-left: 0;
   margin-top: 0;
-  ul, ol {
+  ul,
+  ol {
     margin: 1.5rem 0 1.5rem 3rem;
-    font-size: 90%;
   }
 }
 
 ol {
-  ol, ul {
+  ol,
+  ul {
     margin: 1.5rem 0 1.5rem 3rem;
     font-size: 90%;
   }
 }
 
 li {
-  margin-bottom: 1rem;
+  margin-bottom: 1.2rem;
+  margin-top: 1.5rem;
 }
 
 /* Code
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
 code {
-  padding: .2rem .5rem;
-  margin: 0 .2rem;
+  padding: 0.2rem 0.5rem;
+  margin: 0 0.2rem;
   font-size: 90%;
   white-space: nowrap;
-  background: #F1F1F1;
-  border: 1px solid #E1E1E1;
+  background: #f1f1f1;
+  border: 1px solid #e1e1e1;
   border-radius: 4px;
 }
 
@@ -532,32 +598,47 @@ pre > code {
 /* Tables
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
-th, td {
+th,
+td {
   padding: 12px 15px;
   text-align: left;
-  border-bottom: 1px solid #E1E1E1;
+  border-bottom: 1px solid #e1e1e1;
 }
 
-th:first-child, td:first-child {
+th:first-child,
+td:first-child {
   padding-left: 0;
 }
 
-th:last-child, td:last-child {
+th:last-child,
+td:last-child {
   padding-right: 0;
 }
 
 /* Spacing
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
-button, .button {
+button,
+.button {
   margin-bottom: 1rem;
 }
 
-input, textarea, select, fieldset {
+input,
+textarea,
+select,
+fieldset {
   margin-bottom: 1.5rem;
 }
 
-pre, blockquote, dl, figure, table, p, ul, ol, form {
+pre,
+blockquote,
+dl,
+figure,
+table,
+p,
+ul,
+ol,
+form {
   margin-bottom: 2.5rem;
 }
 
@@ -589,7 +670,7 @@ hr {
   margin-top: 3rem;
   margin-bottom: 3.5rem;
   border-width: 0;
-  border-top: 1px solid #E1E1E1;
+  border-top: 1px solid #e1e1e1;
 }
 
 /* Clearing
@@ -597,8 +678,10 @@ hr {
 
 /* Self Clearing Goodness */
 
-.container:after, .row:after, .u-cf {
-  content: "";
+.container:after,
+.row:after,
+.u-cf {
+  content: '';
   display: table;
   clear: both;
 }
@@ -613,16 +696,21 @@ there.
 */
 
 /* Larger than mobile */
-@media (min-width: 400px) {}
+@media (min-width: 400px) {
+}
 
 /* Larger than phablet (also point when grid becomes active) */
-@media (min-width: 550px) {}
+@media (min-width: 550px) {
+}
 
 /* Larger than tablet */
-@media (min-width: 750px) {}
+@media (min-width: 750px) {
+}
 
 /* Larger than desktop */
-@media (min-width: 1000px) {}
+@media (min-width: 1000px) {
+}
 
 /* Larger than Desktop HD */
-@media (min-width: 1200px) {}
+@media (min-width: 1200px) {
+}
